--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>My CV</title>
-    <!-- bootstrap css -->
+    <!-- ini css bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
-    <!-- bootstrap icon -->
+    <!-- ini bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <!-- my css -->
     <link rel="stylesheet" href="style.css">
   </head>
 
   <body id="home">
+    <script src="/catatan.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    
     <!--navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
       <div class="container">
@@ -53,15 +55,17 @@
       </div>
     </nav>
     <!-- ahir navbar -->
+
     <!-- jumbotron -->
     <section class="jumbotron text-center">
-        <img src="/img/saya.jpg" alt="saya" width="200" 
-        class="rounded-circle img-thumbnail">
-        <h1 class="display-4">Zulhan Kurniawan</h1>
-        <p class="lead">Teknik Informatika | Universitas Sriwijaya</p>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#273036" fill-opacity="1" d="M0,32L30,64C60,96,120,160,180,165.3C240,171,300,117,360,117.3C420,117,480,171,540,186.7C600,203,660,181,720,165.3C780,149,840,139,900,160C960,181,1020,235,1080,266.7C1140,299,1200,309,1260,288C1320,267,1380,213,1410,186.7L1440,160L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"></path></svg>
-        </section>
+      <img src="/img/saya.jpg" alt="saya" width="200" 
+      class="rounded-circle img-thumbnail">
+      <h1 class="display-4">Zulhan Kurniawan</h1>
+      <p class="lead">Teknik Informatika | Universitas Sriwijaya</p>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#273036" fill-opacity="1" d="M0,32L30,64C60,96,120,160,180,165.3C240,171,300,117,360,117.3C420,117,480,171,540,186.7C600,203,660,181,720,165.3C780,149,840,139,900,160C960,181,1020,235,1080,266.7C1140,299,1200,309,1260,288C1320,267,1380,213,1410,186.7L1440,160L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"></path></svg>
+    </section>
     <!-- ahir jumbotron -->
+
     <!-- about -->
     <section id="about">
         <div class="container text-white">
@@ -294,6 +298,8 @@
                 </div>
             </div>
         </div>
+        <button onclick="like()">LIKE!</button>
+        <button onclick="Dislike()">NO!</button>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0D6EFD" fill-opacity="1" d="M0,128L60,154.7C120,181,240,235,360,224C480,213,600,139,720,106.7C840,75,960,85,1080,74.7C1200,64,1320,32,1380,16L1440,0L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
     </section>
@@ -304,6 +310,11 @@
         <p>Created with <i class="bi bi-emoji-smile-upside-down text-danger"></i> by <a href="https://www.instagram.com/zulhan_bhr/"></a>zulhan_bhr</p>
     </footer>
     <!-- ahir footer -->
+
+    <!-- Portofolio ini terinspirasi serta belajar dari 
+         hactiv8 dan pemrograman UNPAS src Youtube yang dimana menggunakan framework Bootstrap
+         semoga ilmu yang diberikan baik dari instruktur
+         maupun kak sandika galih juga menjadi berkah-->
 
   </body>
 </html>
